# Casuals

./: .gitignore  README.md  meson.build
Casuals/: Block.cpp  Block.h  Bullet.cpp  Bullet.h  CollidableRectangle.cpp  CollidableRectangle.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameInput.cpp  GameInput.h  Light.cpp  Light.h  LightSource.cpp  LightSource.h  Main.cpp  Map.cpp  Map.h  MapManager.cpp  MapManager.h  Map_Duel.cpp  Map_Duel.h  Map_Josh.cpp  Map_Josh.h  Map_Polygon.cpp  Map_Polygon.h  Ray.cpp  Ray.h  RayCast.h  RenderUtils.cpp  RenderUtils.h  SPlayer.cpp  SPlayer.h  Vector2.h
